refactor: address review feedback on bulk assign leave policies
Backend:
- move the CSV date formatter into DateTimeUtils as parseDayMonthYearDate
- move MAX_BULK_ASSIGN_ROWS into LeavePolicyConstant
- rename the validation patterns and drop the local trimToEmpty in favour of
  the commons-lang3 trimmer
- narrow the repository Collection params to List/Set and move the empty-input
  and name-normalisation logic out of the repository layer
- key the active assignment lookup by a record instead of a concatenated
  string and pass a single assignment into assignPolicyToEmployee

Frontend:
- pass translated header/example strings into the CSV utils instead of the
  translator function, via a useBulkAssignCsvHeaders hook
- return typed validation errors from validateBulkAssignCsv
- drive the bulk assign mutation with onSuccess/onError callbacks
- make SUMMARY an explicit switch case and extract the CSV regexes/delimiter